--- a/css/main.css
+++ b/css/main.css
@@ -118,21 +118,53 @@ gallery page
 /******************************************************** 
 faq page
 ********************************************************/
+#faqBackground
+{
+    background-color: #7dc4c8;
+}
+
+#faqWrapper
+{
+    max-width: 80%;
+    background-color: #F9F9F9;
+    margin: 7px auto 0 auto;
+    padding: 0;
+}
+
 h1
 {
     font-family: 'Oswald', sans-serif;
     font-size: 2.5em;
     font-weight: normal;
-    margin: -6px 0 5px 10px;
+    margin: -6px 0 5px 15px;
+    color: #7dc4c8;
 }
 
 h2
 {
-    font-family: 'Oswald', sans-serif;
-    font-size: 2em;
+    font-family: 'Oxygen', sans-serif;
+    font-size: 1.3em;
     font-weight: normal;
-    margin: -6px 0 5px 10px;
-    color: #7dc4c8
+    margin: -6px 0 5px 15px;
+}
+
+h3
+{
+    font-family: 'Oxygen', sans-serif;
+    font-size: 1em;
+    font-weight: normal;
+    margin: -3px 0 20px 15px;
+    color: #888;
+}
+
+#faqWrapper a, #faqWrapper a:visited
+{
+    color: black;
+}
+
+#faqWrapper a:hover
+{
+    color: #7dc4c8;
 }
 
 /******************************************************** 
