--- a/css/main.css
+++ b/css/main.css
@@ -69,8 +69,8 @@ div: section, footer
 {
     max-width: 100%;
     margin: 0 auto;
-    /*padding: 0 1%;*/
-    padding: 0;
+    padding: 8px 0;
+    background-color: #7dc4c8;
 }
 
 #wrapper
@@ -88,11 +88,52 @@ img
 
 footer
 {
-    color: #999;
     text-align: center;
     clear: both;
-    padding-top: 10px;
+    
+}
+
+h7
+{
+    color: white;
     font-family: 'Oswald', sans-serif;
+    font-size: 1em;
+    font-weight: normal;
+}
+
+h8
+{
+    color: white;
+    font-family: 'Oswald', sans-serif;
+    font-size: 1.3em;
+    font-weight: normal;
+    margin-top: 10px;
+}
+
+h9
+{
+    color: white;
+    font-family: 'Oswald', sans-serif;
+    font-size: 1em;
+    font-weight: normal;
+}
+
+#footerLeft
+{
+    float: left;
+    width: 33%;
+}
+
+#footerMiddle
+{
+    float: left;
+    width: 34%;
+}
+
+#footerRight
+{
+    float: left;
+    width: 33%;
 }
 
 /******************************************************** 
@@ -120,14 +161,14 @@ faq page
 ********************************************************/
 #faqBackground
 {
-    background-color: #7dc4c8;
+    background-color: white;
 }
 
 #faqWrapper
 {
-    max-width: 80%;
-    background-color: #F9F9F9;
-    margin: 7px auto 0 auto;
+    max-width: 90%;
+    /*background-color: #F9F9F9;*/
+    margin: 30px auto 50px auto;
     padding: 0;
 }
 
@@ -136,7 +177,7 @@ h1
     font-family: 'Oswald', sans-serif;
     font-size: 2.5em;
     font-weight: normal;
-    margin: -6px 0 5px 15px;
+    margin: -6px 0 15px 15px;
     color: #7dc4c8;
 }
 
