--- a/css/main.css
+++ b/css/main.css
@@ -57,28 +57,13 @@ nav li
 /******************************************************** 
 div: section, footer 
 ********************************************************/
-#sectionWrapper
-{
-    max-width: 100%;
-    margin: 0 auto;
-    /*padding: 0 1%;*/
-    padding: 0;
-}
-
 #footerWrapper
 {
     max-width: 100%;
     margin: 0 auto;
     padding: 8px 0;
     background-color: #7dc4c8;
-}
-
-#wrapper
-{
-    max-width: 100%;
-    margin: 0 auto;
-    /*padding: 0 1%;*/
-    padding: 0;
+    overflow: hidden;
 }
 
 img
@@ -139,22 +124,75 @@ h9
 /******************************************************** 
 home page
 ********************************************************/
+#homeWrapper
+{
+    max-width: 90%;
+    /*background-color: #F9F9F9;*/
+    margin: 30px auto 50px auto;
+    padding: 0;
+    text-align: center;
+}
+
+h11
+{
+    font-family: 'Oswald', sans-serif;
+    font-size: 2.5em;
+    font-weight: normal;
+    margin: 3px auto 15px auto;
+    color: #7dc4c8;
+}
 
 /******************************************************** 
 about page
 ********************************************************/
+#aboutWrapper
+{
+    max-width: 90%;
+    /*background-color: #F9F9F9;*/
+    margin: 30px auto 50px auto;
+    padding: 0;
+}
+
+h10
+{
+    font-family: 'Oswald', sans-serif;
+    font-size: 2.5em;
+    font-weight: normal;
+    margin: 3px 0 15px 15px;
+    color: #7dc4c8;
+}
 
 /******************************************************** 
 vendors page
 ********************************************************/
+#vendorWrapper
+{
+    max-width: 90%;
+    /*background-color: #F9F9F9;*/
+    margin: 30px auto -30px auto;
+    padding: 0;
+}
 
 /******************************************************** 
 volunteers page
 ********************************************************/
+#volunteerWrapper
+{
+    max-width: 90%;
+    /*background-color: #F9F9F9;*/
+    margin: 30px auto -30px auto;
+    padding: 0;
+}
 
 /******************************************************** 
 gallery page
 ********************************************************/
+#galleryWrapper
+{
+    max-width: 100%;
+    margin: 0 auto;
+    padding: 8px 0;
+}
 
 /******************************************************** 
 faq page
@@ -177,7 +215,7 @@ h1
     font-family: 'Oswald', sans-serif;
     font-size: 2.5em;
     font-weight: normal;
-    margin: -6px 0 15px 15px;
+    margin: 3px 0 15px 15px;
     color: #7dc4c8;
 }
 
@@ -333,15 +371,16 @@ fieldset
 
 #contactBackground
 {
-    background-color: #7dc4c8;
+    background-color: white;
 }
 
 #contactWrapper
 {
     max-width: 90%;
     background-color: #F9F9F9;
-    margin: 2px auto 0 auto;
+    margin: 2px auto 6px auto;
     padding: 0;
+    overflow: hidden;
 }
 
 #leftSide, #rightSide 
@@ -350,18 +389,17 @@ fieldset
     min-height: 450px;
     color: white;
     height: 475px;
+    background-color: #F9F9F9;
 }
 
 #leftSide 
 {
     width: 60%;
-    background-color: #F9F9F9;
 }
 
 #rightSide 
 {
     width: 40%;
-    background-color: #F9F9F9;
 }
 
 h4
