--- a/css/main.css
+++ b/css/main.css
@@ -147,6 +147,14 @@ h11
     color: #7dc4c8;
 }
 
+#countdown
+{
+    text-align: center;
+    font-family: 'Oswald', sans-serif;
+    font-size: 2em;
+    color: #888;
+}
+
 /******************************************************** 
 about page
 ********************************************************/
@@ -235,7 +243,7 @@ h2
 h3
 {
     font-family: 'Oxygen', sans-serif;
-    font-size: 1em;
+    font-size: 1.15em;
     font-weight: normal;
     margin: -3px 0 20px 15px;
     color: #888;
@@ -452,6 +460,6 @@ h6
 
 /******************************************************** 
 relevant colors: #7dc4c8 (teal) & #52aaaf (dark teal)
-relevant colors: #F9F9F9 (light gray)
+relevant colors: #F9F9F9 (light gray) & #888 (dark gray)
 relevant texts: oswald, oxygen
 ********************************************************/
