--- a/css/main.css
+++ b/css/main.css
@@ -31,6 +31,11 @@ nav a:hover
     color: white;
 }
 
+#homebutton
+{
+    font-family: 
+}
+
 nav
 {
     font-family: 'Oswald', sans-serif;
@@ -47,11 +52,17 @@ nav ul
     list-style: none;
     margin: 0; 
     padding: 10px 0;
+    display: flex;
 }
 
 nav li
 {
     display: inline-block;
+}
+
+nav ul li:first-child 
+{
+    margin-right: auto;
 }
 
 /******************************************************** 
