--- a/css/main.css
+++ b/css/main.css
@@ -176,6 +176,7 @@ about page
     /*background-color: #F9F9F9;*/
     margin: 30px auto 50px auto;
     padding: 0;
+    text-align: center;
 }
 
 h10
