--- a/css/main.css
+++ b/css/main.css
@@ -160,8 +160,9 @@ h10 {
   margin: 3px 0 15px 15px;
   color: #7dc4c8;
 }
-.fanalepic {
-  width: 50%;
+.bobafestbrochure {
+  width: 40%;
+  box-shadow: 8px 10px 8px #888888;
 }
 /******************************************************** 
 vendors page
