Turned brochure picture to link. Changed fonts on navbar to oh wonderful

--- a/css/main.css
+++ b/css/main.css
@@ -58,7 +58,9 @@ nav li {
 nav ul li:first-child {
   margin-right: auto;
 }
-
+.navbarFont {
+  font-family: oh-wonderful;
+}
 /******************************************************** 
 div: section, footer 
 ********************************************************/
