--- a/css/main.css
+++ b/css/main.css
@@ -7,6 +7,9 @@
   font-family: biko;
 }
 
+.bikofont {
+  font-family: biko;
+}
 /******************************************************** 
 header
 ********************************************************/
