--- a/css/main.css
+++ b/css/main.css
@@ -396,11 +396,12 @@ fieldset {
 }
 
 #leftSide {
-  width: 60%;
+  width: 100%;
 }
 
 #rightSide {
-  width: 40%;
+  width: 100%;
+  text-align: center;
 }
 
 h4 {
