changed navbar font to biku and resized the image of fanale sponsor image

--- a/css/main.css
+++ b/css/main.css
@@ -169,6 +169,9 @@ h10 {
   width: 40%;
   box-shadow: 8px 10px 8px #888888;
 }
+.fanalepic {
+  width: 50%;
+}
 /******************************************************** 
 vendors page
 ********************************************************/
